feat(seo): enhance personal branding, add internal links to footer, and add custom favicon

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,6 @@
 {
-    "site.title": "Jair Revilla - Moodle Engineer",
-    "site.description": "Personal site of Jair Revilla, Moodle Engineer specializing in plugins, architecture, and performance.",
+    "site.title": "Jair Revilla - Moodle Expert & Plugin Developer",
+    "site.description": "Specialist Moodle Engineer focused on high-performance, custom plugin development, and corporate integrations. 12+ years optimizing eLearning platforms.",
     "nav.home": "Home",
     "nav.about": "About",
     "nav.cases": "Case Studies",
