--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,6 +1,6 @@
 {
-  "site.title": "Jair Revilla - Moodle Engineer",
-  "site.description": "Sitio personal de Jair Revilla, Ingeniero Moodle especializado en plugins, arquitectura y performance.",
+  "site.title": "Jair Revilla - Experto Moodle & Desarrollador de Plugins",
+  "site.description": "Ingeniero especialista en Moodle de alto rendimiento, desarrollo de plugins a medida e integraciones corporativas. Más de 12 años optimizando plataformas eLearning.",
   "nav.home": "Inicio",
   "nav.about": "Sobre mí",
   "nav.cases": "Casos de éxito",
