fix(seo): improve meta descriptions, add hreflang, optimize INP and mobile font size

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,6 @@
 {
     "site.title": "Jair Revilla - Moodle Expert & Plugin Developer",
-    "site.description": "Specialist Moodle Engineer focused on high-performance, custom plugin development, and corporate integrations. 12+ years optimizing eLearning platforms.",
+    "site.description": "Moodle Engineer specializing in high-performance, custom plugins, and scalable architectures. 12+ years exp.",
     "nav.home": "Home",
     "nav.about": "About",
     "nav.cases": "Case Studies",
