--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,6 +1,6 @@
 {
   "site.title": "Jair Revilla - Experto Moodle & Desarrollador de Plugins",
-  "site.description": "Ingeniero especialista en Moodle de alto rendimiento, desarrollo de plugins a medida e integraciones corporativas. Más de 12 años optimizando plataformas eLearning.",
+  "site.description": "Ingeniero Moodle experto en rendimiento, plugins y arquitecturas escalables. +12 años en eLearning.",
   "nav.home": "Inicio",
   "nav.about": "Sobre mí",
   "nav.cases": "Casos de éxito",
