fix(seo): expand root page content, add x-default hreflang, and optimize meta description length

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,6 +1,6 @@
 {
   "site.title": "Jair Revilla - Experto Moodle & Desarrollador de Plugins",
-  "site.description": "Ingeniero Moodle experto en rendimiento, plugins y arquitecturas escalables. +12 años en eLearning.",
+  "site.description": "Ingeniero Moodle experto en rendimiento, plugins a medida y arquitecturas escalables. +12 años optimizando eLearning para empresas y universidades.",
   "nav.home": "Inicio",
   "nav.about": "Sobre mí",
   "nav.cases": "Casos de éxito",
